--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,13 @@
 <% @users.each do |user| %>
     <div class="user-container">
       <img src="<%= user.photo %>" alt="user photo">
-      <h2>Name: <%= user.name %></h2>
-      <h4>Number of posts: <%= user.post_counter %></h4>
-      <h4>
-      <%= link_to "View profile", user_path(user) %>
-      </h4>
+      <div>
+        <h2>Name: <%= user.name %></h2>
+        <h4>Number of posts: <%= user.post_counter %></h4>
+        <h4>
+          <%= link_to "View profile", user_path(user) %>
+        </h4>
+      </div>
     </div>
 <% end %>
 <%= render "shared/footer" %>
