--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,24 @@
  *= require_self
  */
 
+ body {
+   box-sizing: border-box;
+   padding: 0;
+   margin: 0;
+ }
+
+ .header {
+   border: 2px solid black;
+   width: 100%;
+   height: 15vh;
+   background-color: rgb(186, 186, 186);
+   margin-bottom: 3%;
+ }
+
+ .header h1 {
+   text-align: center;
+ }
+
  .user-container {
     display: flex;
     justify-content: center;
