--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,9 @@
    margin: 0;
  }
 
- .header {
-   border: 2px solid black;
+ .header,
+ .footer {
+   border-bottom: 1px solid black;
    width: 100%;
    height: 15vh;
    background-color: rgb(186, 186, 186);
@@ -30,6 +31,8 @@
 
  .header h1 {
    text-align: center;
+   margin: 0;
+   padding-top: 2%;
  }
 
  .user-container {
@@ -55,3 +58,12 @@
    text-align: right;
    font-size: 1.2em;
 }
+
+.footer {
+   height: 10vh;
+   margin-bottom: 0;
+   border-top: 1px solid black;
+   color: black;
+   text-align: right;
+   font-size: 1.2em;
+ }
