Add basic styles for the show action in posts_controller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,14 +81,16 @@
 
 .show-header h4,
 .posts-header h4,
-.all-posts div {
+.all-posts div,
+.single-post div {
    text-align: right;
 }
 
 .bio,
 .show-posts,
 .all-posts,
-.post-comments {
+.post-comments,
+.single-post {
    width: 74%;
    height: auto;
    padding: 1%;
