--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,17 @@
 <%= render "shared/header" %>
-  <div>
+  <div class="single-post">
     <h2><%= @post.title %></h2>
-    <p><%= @post.text %></p>
     <div>
       <span>Comments: <%= @post.comments_counter %></span>
       <span>Likes: <%= @post.likes_counter %></span>
     </div>
+    <p><%= @post.text %></p>
   </div>
     
-  <h1>All comments</h1>
+  <h1 class="comments-header">All comments</h1>
+  <div class="post-comments">
   <% @post.comments.each do |comment| %>
-    <div>
       <h4>Username: <%= comment.user.name %> - <span> <%= comment.text %> </span> </h4>
-    </div>
   <% end %>
+  </div>
 <%= render "shared/footer" %>
