--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,22 @@
       <span>Likes: <%= @post.likes_counter %></span>
     </div>
     <p><%= @post.text %></p>
+    <%= form_with(model: @like, url: post_likes_path(@post), method: :post) do |form| %>
+    <%= form.hidden_field :users_id, value: @user.id %>
+    <%= form.hidden_field :posts_id, value: @post.id %>
+    <%= form.submit "Like" %>
+  <% end %>
+ </div>
   </div>
+
+  <%= form_with(model: @comment, url: post_comments_path(@post), method: :post) do |form| %>
+    <h2>Add a comment</h2>
+    <%= form.label :text %>
+    <%= form.text_area :text %><br>
+
+    <%= form.submit "Add Comment" %><br>
+  <% end %>
+ </div>
     
   <h1 class="comments-header">All comments</h1>
   <div class="post-comments">
