Add basic styles for the forget password and sign up btn

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,6 +134,12 @@ textarea {
   margin-right: 5%;
 }
 
+.signup,
+.forget-pw {
+  margin: 0 0 0 30%;
+  font-size: 1.2em;
+}
+
 .login-form {
   width: 50%;
   flex-direction: column;
