--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 <button type="button">
-  <%= link_to "See all posts", user_posts_path(@user) %>
+  <%= link_to "See all posts", user_posts_path(@user.id) %>
 </button>
 
 <%= render "shared/footer" %>
